# gateway

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml  docker.yml  release-control-plane.yml  release.yml
conf/: gateway.yaml
control-plane/: .dockerignore  Dockerfile  Makefile  README.md  compose.test.yaml  go.mod  go.sum
control-plane/api/: openapi.yaml
control-plane/cmd/control-plane/: main.go
control-plane/internal/auth/: password.go  password_test.go
control-plane/internal/config/: config.go  config_test.go
control-plane/internal/gateway/: gateway.go  http.go  mock.go
control-plane/internal/httpapi/: admin.go  auth.go  data.go  openapi_test.go  server.go  server_test.go
control-plane/internal/integration/: backend_test.go  gateway_tenant_e2e_test.go
control-plane/internal/kv/: session.go
control-plane/internal/kv/memory/: session.go
control-plane/internal/kv/redis/: session.go
control-plane/internal/store/memory/: store.go  store_test.go
control-plane/internal/store/postgres/: store.go
control-plane/internal/user/: user.go
control-plane/web/: playwright.config.ts  vitest.config.ts
control-plane/web/e2e/: control-plane.spec.ts
control-plane/web/src/: App.tsx
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/consts/: Cargo.toml
crates/consts/src/: error_code.rs  family.rs  lib.rs  model_type.rs
crates/dag/: Cargo.toml
crates/dag/src/: context.rs  executor.rs  lib.rs  nodes.rs
crates/engines/: Cargo.toml
crates/engines/src/: base.rs  bespoke.rs  claude_engine.rs  echo.rs  engine.rs  factory.rs  families.rs  http_transport.rs  lib.rs  openai_engine.rs  pump.rs  realtime.rs  sigv4.rs  sse.rs  transport.rs  usage_extract.rs
crates/engines/tests/: golden_fixtures.rs  http_transport_wire.rs  request_construction.rs
crates/handler/: Cargo.toml
crates/handler/src/: lib.rs  offline.rs  plugins.rs
crates/models/: Cargo.toml
crates/models/src/: cost.rs  error.rs  lib.rs  params.rs  recorder.rs  request.rs  response.rs  token_estimate.rs  usage.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: anthropic.rs  dsl.rs  lib.rs  openai.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/tests/: bench.rs  compat.rs  e2e.rs  live_path.rs
crates/state/: Cargo.toml
crates/state/src/: admission.rs  avail.rs  configstore.rs  governance.rs  health.rs  keystore.rs  lib.rs  store.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/views/: Cargo.toml
crates/views/src/: lib.rs
deploy/: nginx.conf
docs/: _config.yml  api.md  architecture.md  configuration.md  deployment.md  development.md  examples.md  governance.md  index.md  multi-instance.md  observability.md  providers.md
