[package]
name = "gw-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Local file configuration — no config center."

[dependencies]
gw-consts = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
