[package]
name = "ap-engines"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Model engines: ModelEngine trait + factory + implementations."

[dependencies]
ap-consts = { workspace = true }
ap-models = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
# real-socket wire test for HttpTransport (loopback only, never egress)
axum = { workspace = true }

[lints]
workspace = true
