[package]
name = "ap-handler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Business orchestration: build DagContext, run the layered DAG."

[dependencies]
ap-consts = { workspace = true }
ap-models = { workspace = true }
ap-config = { workspace = true }
ap-state = { workspace = true }
tracing = { workspace = true }
ap-engines = { workspace = true }
ap-dag = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
