[package]
name = "ap-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "HTTP entrypoint: config + state + mock transport + axum router."

[[bin]]
name = "ap"
path = "src/main.rs"

[dependencies]
ap-config = { workspace = true }
ap-state = { workspace = true }
ap-engines = { workspace = true }
ap-views = { workspace = true }
ap-task = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
metrics-exporter-prometheus = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
ap-protocol = { workspace = true }
# ws e2e: loopback connection, zero egress
tokio-tungstenite = "0.26"
futures = { workspace = true }

[lints]
workspace = true
